# cf-mlp

./: .gitignore  32-1.txt  CMakeLists.txt  custom-images-idx3-ubyte  custom-labels-idx1-ubyte  inf-out.txt  inf.txt  inf2.txt  inf3.txt  out.txt  out1.txt  setup.sh
src/: inference.cpp  mlp.cpp
